--- a/HttpClientMiddleware.Tests/HttpClientMiddleware.Tests.csproj
+++ b/HttpClientMiddleware.Tests/HttpClientMiddleware.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HttpClientMiddleware.MessageHandlerWrapperMiddleware\HttpClientMiddleware.MessageHandlerWrapperMiddleware.csproj" />
     <ProjectReference Include="..\HttpClientMiddleware\HttpClientMiddleware.csproj" />
   </ItemGroup>
 </Project>
