--- a/HttpClientMiddleware.MessageHandlerWrapperMiddleware/HttpClientMiddleware.MessageHandlerWrapperMiddleware.csproj
+++ b/HttpClientMiddleware.MessageHandlerWrapperMiddleware/HttpClientMiddleware.MessageHandlerWrapperMiddleware.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
+    <Description>HttpClient middleware adapter that enables reuse of existing DelegatingHandlers and HttpMessageHandlers in a middleware pipeline</Description>
+    <Authors>Aidan Steele</Authors>
+    <PackageTags>httpclient middleware delegatinghandler</PackageTags>
+    <PackageProjectUrl>https://github.com/glassechidna/HttpClientMiddleware</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\HttpClientMiddleware\HttpClientMiddleware.csproj" />
