--- a/HttpClientMiddleware/HttpClientMiddleware.csproj
+++ b/HttpClientMiddleware/HttpClientMiddleware.csproj
@@ -2,6 +2,10 @@
   <PropertyGroup>
     <!-- ImmutableStack needs netstandard1.6 -->
     <TargetFramework>netstandard1.6</TargetFramework>
+    <Description>Middleware facilitation for outbound HttpClient requests that is a mirror image of the functionality provided by ASP.Net Core (and OWIN) inbound request middleware.</Description>
+    <Authors>Aidan Steele</Authors>
+    <PackageTags>httpclient middleware aspnetcore correlation</PackageTags>
+    <PackageProjectUrl>https://github.com/glassechidna/HttpClientMiddleware</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="[1.4.0,2)" />
