--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ sudo: false
 
 script:
   - |
+    set -eo pipefail
+
+    dotnet test HttpClientMiddleware.Tests/HttpClientMiddleware.Tests.csproj
+
     version=2.0.0
     if [ -z "$TRAVIS_TAG" ]; then
       version="$version-pre${TRAVIS_BUILD_NUMBER}"
