The new MiddlewareBuilder functionality obviates the need for the HeaderPassthroughInboundMiddleware class
What a mouthful

--- a/HttpClientMiddleware.HeaderPassthroughMiddleware/HttpClientMiddleware.HeaderPassthroughMiddleware.csproj
+++ b/HttpClientMiddleware.HeaderPassthroughMiddleware/HttpClientMiddleware.HeaderPassthroughMiddleware.csproj
@@ -7,6 +7,7 @@
     <PackageProjectUrl>https://github.com/glassechidna/HttpClientMiddleware</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HttpClientMiddleware.AspNetCore\HttpClientMiddleware.AspNetCore.csproj" />
     <ProjectReference Include="..\HttpClientMiddleware\HttpClientMiddleware.csproj" />
   </ItemGroup>
   <ItemGroup>
